syntax = "proto3";

package proto;

service GreetingService {
    rpc Greeting(GreetRequest) returns (GreetResponse) {}
    rpc GreetOnce(GreetRequest) returns (GreetResponse) {}
    rpc GreetMulti(stream GreetRequest) returns (stream GreetResponse) {}
}

message GreetRequest {
    string name = 1;
    int32 age = 2;
}

message GreetResponse {
    string content = 1;
    string attatchment = 2;
}
